--- a/static/index.html
+++ b/static/index.html
@@ -2,36 +2,29 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Dental Career Planning</title>
+        <title>CTL Interactives: Dental Career Planning</title>
     </head>
-    <body style="display: none">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="row titlebar">
-                    <div class="col-md-5">
-                        <h3 class="interactive-module-title">Dental Career Planning</h3>
-                    </div>
-                    <div class="col-md-7 text-right steps viewonly"></div>
-                </div>
-                <div class="career-planning"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 footer">
-                <ul class="pull-left viewonly">
-                    <li id="about"><a href="http://interactives.ctl.columbia.edu">About</a></li>
-                    <li id="help"><a href="http://support.ccnmtl.columbia.edu/">Help</a></li>
-                    <li id="contact"><a href="mailto:ccnmtl-match@columbia.edu">Contact</a></li>
-                </ul>
-                <ul class="pull-right">
-                    <li>
-                        <a href="http://ctl.columbia.edu" target="_blank" title="Center for Teaching &amp; Learning">
-                            <img src="./ctl-logo.png" class="ctl-logo">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+    <body>
+        <div class="interactive-container" style="display: none;">
+            <header class="clearfix">
+                <p class="visible-print-block" role="presentation"><b>Population Based Approaches to Patient Service and Professional Success (PASS)<br>http://pass.ctl.columbia.edu</b></p>
+                <h1 class="interactive-module-title pull-left">Dental Career Planning</h1>
+            </header>
+
+            <div class="steps hidden-print clearfix"></div>
+            <div class="career-planning"></div>
+
+            <footer role="contentinfo" class="clearfix">
+                    <ul class="footer-moreinfo pull-left hidden-print">
+                        <li><a href="http://interactives.ctl.columbia.edu" target="_blank"><span class="sr-only">Learn more </span>About<span class="sr-only"> this interactive</span></a></li>
+                        <li><a href="http://support.ccnmtl.columbia.edu" target="_blank">Help<span class="sr-only"> on using this website</span></a></li>
+                        <li><a href="mailto:ccnmtl-pass@columbia.edu">Contact<span class="sr-only"> us</span></a></li>
+                    </ul>
+                    <h1 class="sr-only">This interactive is produced by:</h1>
+                    <ul class="footer-logos pull-right">
+                        <li><a href="http://ctl.columbia.edu" target="_blank"><img src="./ctl-logo.png" alt="Center for Teaching and Learning at Columbia University" /></a></li>
+                    </ul>
+            </footer>
 
         <div class="modal fade" id="map-layers-modal" tabindex="-1" role="dialog" aria-labelledby="Help">
             <div class="modal-dialog" role="document">
@@ -42,7 +35,7 @@
                     </div>
                     <div class="modal-body">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-xs-4 layers-info">
                                 <h5>Choose base layer</h5>
                                 <select class="select-base-map">
                                     <option value="">Geography</option>
@@ -97,7 +90,7 @@
                                     <div class="clearfix"></div>
                                 </div>
                             </div>
-                            <div class="col-md-8 text-center">
+                            <div class="col-xs-8 text-center">
                                 <div class="map-layers">
                                     <!-- These are the layers that never get hidden: geography, the borders of the counties and the general labels. -->
                                     <img class="map-layer" alt="career map" src="./geography.jpg" />
@@ -123,7 +116,7 @@
                             </div>
                         </div>
                         <div class="row spacer">
-                            <div class="col-md-12 text-center">
+                            <div class="col-xs-12 text-center">
                                 <h5>Demographics</h5>
                                 <table class="table table-bordered">
                                     <tbody>
@@ -198,12 +191,13 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
         </div>
 
+        </div><!-- interactive-container -->
         <script src="./bundle.js" type="text/javascript"></script>
     </body>
 </html>
