--- a/test/view-test.html
+++ b/test/view-test.html
@@ -1,24 +1,25 @@
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <!-- encoding must be set for mocha's special characters to render properly -->
-    <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
-    <script src="../node_modules/mocha/mocha.js"></script>
-    <script src="../node_modules/chai/chai.js"></script>
-</head>
-<body>
-    <div id="mocha"></div>
-    <script>
-        mocha.ui('bdd')
-        expect = chai.expect
-    </script>
-    <script src="../dist/testBundle.js"></script>
-    <script>
-        mocha.run()
-    </script>
+    <head>
+        <title>Mocha Tests</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="../node_modules/mocha/mocha.css">
+    </head>
+    <body>
+        <div id="mocha"></div>
+        <script src="../node_modules/mocha/mocha.js"></script>
+        <script src="../node_modules/mocha-teamcity-reporter/lib/teamcityBrowser.js"></script>
+        <script src="../node_modules/chai/chai.js"></script>
+        <script>
+            mocha.setup('bdd');
+            expect = chai.expect;
+        </script>
+        <script src="../dist/testBundle.js"></script>
+        <script>mocha.run();</script>
 
-    <!-- @todo - consider how to include/reference project-level index.html -->
-    <div class="steps"></div>
-    <div class="career-planning"></div>
-</body>
+        <!-- @todo - consider how to include/reference project-level index.html -->
+        <div class="steps"></div>
+        <div class="career-planning"></div>
+
+    </body>
 </html>
